feat: commit-first-section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
 
     <main>
 
+    <!-- first section -->
 
+        <div class="container-blu">
+
+            <div class="item-container-blu"></div>
+
+        </div>
+
+    <!--/ first section -->
 
 
     </main>
