--- a/index.html
+++ b/index.html
@@ -43,21 +43,27 @@
     <!--/ first section -->
 
             <section class="bg-gray"> 
-                <div class ="container-3"></div>
+                <div class ="container-3">
                     <div class="row"></div>
-                    <div class="item-row1"></div>
+                    <div class="child"></div>
+                </div>
             </section>
  
 
             <section class="bg-gray"> 
-                <div class ="container-3"></div>
+                <div class ="gray container-3">
+                    <div class="child"></div>
                     <div class="row"></div>
+                </div>
             </section>
+ 
             
             
             <section class="bg-gray"> 
-                <div class ="container-3"></div>
+                <div class ="container-3">
                     <div class="row"></div>
+                    <div class="child"></div>
+                </div>
             </section>
 
 
