--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="item-container-8"></div>
                     </div>
              </div>
-        
+        <br>
 
 
 
@@ -101,7 +101,10 @@
     <!-- Piede pagina -->
 
     <footer>
-
+        <div class="container-footer"> 
+            <button class="bottone-logo">Logo</button>
+            <button class="bottone">Bottone</button>
+        </div>       
 
 
 
